--- a/estilos.css
+++ b/estilos.css
@@ -1,21 +1,18 @@
+* {
+    font-family: 'Overpass', sans-serif;
+    color: #f1f1f8 ;
+}
 .titulo{
     color: #61de56 ;
-    font-family: 'Overpass', sans-serif;
     font-weight: 700;
 }
 body{
     background-color: #373737 ;
-    color: #f1f1f8;
-
-}
-.subtitulo{
-    color: #f1f1f8 ;
-    font-family: 'Overpass', sans-serif;
+    margin: 0mm !important;
+    padding: 0% !important;
 }
 p{
     font-size: 18px;
-    font-family: 'Overpass', sans-serif;
-    font-weight: 200;
 }
 .text-title{
     font-weight: 400;
@@ -25,47 +22,28 @@ p{
 .text-list-point{
     color: #61de56;
 }
-body{
-    margin: 0mm !important;
-    padding: 0% !important;
+#prinback, #prinback-a, #prinback-art{
+    padding-top: 20mm !important;
+    padding-bottom: 20mm !important;
+    background-color: #f1f1f8;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 #prinback{
-    padding-top: 20mm !important;
-    padding-bottom: 20mm !important;
-    /*background-image: url('12345.jpg');*/
-    background-color: #f1f1f8;
     background-image: url('https://images.unsplash.com/photo-1579869847557-1f67382cc158?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=891&q=80');    
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
 }
 #prinback-a{
-    padding-top: 20mm !important;
-    padding-bottom: 20mm !important;
-    /*background-image: url('12345.jpg');*/
-    background-color: #f1f1f8;
     background-image: url('redes.png');    
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
 }
 #prinback-art{
-    padding-top: 20mm !important;
-    padding-bottom: 20mm !important;
-    /*background-image: url('12345.jpg');*/
-    background-color: #f1f1f8;
     background-image: url('https://images.unsplash.com/photo-1532181408476-c4cacd791406?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80');    
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
 }
 .art-title{
     color: #61de56;
 }
 .button{
-    color: #f1f1f8;
     background: none;
-    /*background-color: #61de56;*/
     width: 40mm;
     height: 10mm;
     border-radius: 5px;
@@ -75,12 +53,7 @@ body{
 }
 .button:hover{
     background-color: #61de56;
-    color: #f1f1f8;
     text-decoration: none;
-    
-}
-.button a{
-    color: #f1f1f8;
 }
 .button a:hover{
     text-decoration: none;
@@ -88,15 +61,8 @@ body{
 #col-prin{
     padding-left: 120px;
 }
-@media (max-width: 600px){
-    #col-prin{
-        padding-left: 10px;
-    }
-}
 .nombre{
     font-size: 12px;
-    font-family: 'Overpass', sans-serif;
-    font-weight: 200; 
 }
 .sinpadding [class*="col-"] {
     padding: 0;
@@ -105,29 +71,21 @@ body{
     background-color: #373737 !important;
     color: #61de56;
 }
-.navbar-brand{
-    color: #61de56 !important;
-}
-.nav-link{
+.navbar-brand, .nav-link{
     color: #61de56 !important;
 }
 .dottk{
     font-size: 8px;
-    font-family: 'Overpass', sans-serif;
-    font-weight: 200; 
-
 }
-.navbar-brand{
-    font-family: 'Overpass', sans-serif;
+.navbar-brand, .container-nombre, .dottk, .nombre, p{
     font-weight: 200; 
-
 }
 .container-nombre{
     display: inline-block !important;
     font-size: 12px;
-    font-family: 'Overpass', sans-serif;
-    font-weight: 200;
 }
-h2{
-    font-family: 'Overpass', sans-serif;
+@media (max-width: 600px){
+    #col-prin{
+        padding-left: 10px;
+    }
 }
